--- a/src/app/admin/dashboard/views/main.html
+++ b/src/app/admin/dashboard/views/main.html
@@ -37,7 +37,7 @@
                             <li><a ui-sref="main.admin.instruction">Dokumen Instruksi Kerja / SOP</a></li>
                             <li><a ui-sref="main.admin.form">Dokumen Form</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a ui-sref="main.admin.document">View Dokumen</a></li>
+                            <li><a ui-sref="main.admin.document">Document Exploler</a></li>
                         </ul>
                     </li>
 
