--- a/src/app/admin/project/views/template.modal.html
+++ b/src/app/admin/project/views/template.modal.html
@@ -46,7 +46,7 @@
 	                                <td>{{ $index + 1 }}</td>
 	                                <td>{{ object.name }}</td>
 	                                <td>
-                                        <a ng-click="vm.use(object)" class="btn btn-default btn-xs" popover="Just Click" popover-trigger="mouseenter">
+                                        <a ng-click="vm.use(object)" class="btn btn-default btn-xs" popover="Pilih template" popover-trigger="mouseenter">
 	                                		Use this template
                                 		</a>
 	                                </td>
