--- a/src/app/admin/guide/views/list.html
+++ b/src/app/admin/guide/views/list.html
@@ -1,7 +1,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Dokumen Pedoman</h1>
+            <h1 class="page-header">Dokumen Pedoman Mutu</h1>
         </div>
     </div>
 
