--- a/src/app/admin/form/views/list.html
+++ b/src/app/admin/form/views/list.html
@@ -7,6 +7,11 @@
 
     <div class="row">
     	<div class="col-lg-12">
+			<grid-view grid-data="vm.forms" service="vm.service" field-config="vm.fields" action-config="vm.actions">
+				<a name="toolbar" ui-sref="main.admin.form.create" class="btn btn-primary"><i class="fa fa-plus"></i></a>
+			</grid-view>
+
+			<!--
 	    	<div class="panel panel-default">
 	            <div class="panel-heading clearfix">
 	            	<a ui-sref="main.admin.form.create" class="btn btn-primary">Add New</a>
@@ -41,14 +46,11 @@
 	                        <tbody>
 	                            <tr ng-repeat="object in vm.forms | filter:query | orderBy:sortField:reverse track by $index">
 	                                <td>{{ $index + 1 }}</td>
-	                                <!--td>{{ object.instruction.guide.standard_document.standard.description }}</td-->
-	                                <!--td>{{ object.instruction.guide.standard_document.description }}</td-->
-	                                <!--td>{{ object.instruction.guide.description }}</td-->
 	                                <td>{{ object.instruction.description }}</td>
 	                                <td>{{ object.no }}</td>
 	                                <td>{{ object.description }}</td>
-	                                <td>
-                                        <a ng-disabled="!object.document" ng-href="{{ $root.FILE_HOST }}/upload/form/{{ object.document }}" class="btn btn-info btn-xs" target="_blank"><i class="fa fa-arrow-down"></i></a>&nbsp;|
+	                                <td style="white-space: nowrap;">
+                                        <a ng-disabled="!object.document" ng-href="{{ $root.FILE_HOST }}/upload/form/{{ object.document }}" class="btn btn-info btn-xs" target="_blank"><i class="fa fa-download"></i></a>&nbsp;|
                                         <a ng-click="vm.update(object.id)" class="btn btn-success btn-xs"><i class="fa fa-edit"></i></a>&nbsp;|
                                         <a ng-click="vm.destroy(object.id, $index)" class="btn btn-danger btn-xs"><i class="fa fa-close"></i></a>
                                     </td>
@@ -58,6 +60,7 @@
 	                </div>
 	            </div>
 	        </div>
+			-->
        	</div>
    	</div>
 
