--- a/src/app/admin/standard/views/list.html
+++ b/src/app/admin/standard/views/list.html
@@ -7,10 +7,15 @@
 
     <div class="row">
     	<div class="col-lg-12">
+			
+			<grid-view grid-data="vm.standards" service="vm.service" field-config="vm.fields" action-config="vm.actions">
+				<a name="toolbar" ui-sref="main.admin.standard.create" class="btn btn-primary"><i class="fa fa-plus"></i></a>
+			</grid-view>
+
+			<!--
 	    	<div class="panel panel-default">
 	            <div class="panel-heading clearfix">
-	            	<a ui-sref="main.admin.standard.create" class="btn btn-primary" popover="Add New" popover-trigger="mouseenter"><i class="fa fa-plus"></i></a>
-	       
+	            	<a ui-sref="main.admin.standard.create" class="btn btn-primary" popover="Add New" popover-trigger="mouseenter"><i class="fa fa-plus"></i></a>	       
 	                <div class="panel-title pull-right">
 	                	<div class="form-inline">
 		                	<div class="input-group custom-search-form">
@@ -58,6 +63,8 @@
 	                </div>
 	            </div>
 	        </div>
+			-->
+			
        	</div>
    	</div>
 
