--- a/src/app/user/dashboard/views/main.html
+++ b/src/app/user/dashboard/views/main.html
@@ -20,6 +20,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="#" ui-sref="main.user.task">Routines</a></li>
                             <li><a href="#" ui-sref="main.user.assignment">Assignments</a></li>
+                            <li><a href="#" ui-sref="main.user.pica">PICA</a></li>
                         </ul>
                     </li>
                     <li dropdown>
@@ -29,10 +30,10 @@
                             <li><a href="#" ui-sref="main.user.projectAssess">Assessment</a></li>
                         </ul>
                     </li>
-                    
+
                     <li><a ui-sref="main.user.subordinat">Subordinat</a></li>
                     <li><a ui-sref="main.user.document">Dokumen</a></li>
-                   
+
                     <li dropdown>
                         <a href="" dropdown-toggle>Laporan<span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -50,7 +51,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li dropdown>
                         <a href="" dropdown-toggle>
-                            {{ user.user.name }} ({{ user.user.nik }}) 
+                            {{ user.user.name }} ({{ user.user.nik }})
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
