--- a/src/app/user/dashboard/views/main.html
+++ b/src/app/user/dashboard/views/main.html
@@ -20,7 +20,8 @@
                         <ul class="dropdown-menu">
                             <li><a href="#" ui-sref="main.user.task">Routines</a></li>
                             <li><a href="#" ui-sref="main.user.assignment">Assignments</a></li>
-                            <li><a href="#" ui-sref="main.user.pica">PICA</a></li>
+                            <li><a href="#" ui-sref="main.user.pica">Problem</a></li>
+                            <li><a href="#" ui-sref="main.user.picadetail">PICA</a></li>
                         </ul>
                     </li>
                     <li dropdown>
@@ -41,6 +42,7 @@
                             <li><a href="#">Fakultas</a></li>
                             <li><a href="#">Prodi</a></li>
                             <li><a href="#">Department</a></li>
+                            <li><a href="#" ui-sref="main.user.appraisal">Report Problem</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Pengumuman</a></li>
                             <li><a href="#">Event</a></li>
